1. JIRA SS-1379 fix : Hierarchy management page is not proper with icons out of place in mobile screen. 2. Events clean up in dashbaord and edit profile page.

--- a/Source/SSWeb/src/main/webapp/resources/css/style-resp.css
+++ b/Source/SSWeb/src/main/webapp/resources/css/style-resp.css
@@ -1618,6 +1618,45 @@
 	.prof-details-header .icn-social-add {
 		width: 32px;
 	}
+	.v-hr-tbl-icn-wraper {
+		display: none;
+		position: absolute;
+		right: 2px;
+		top: 33px;
+		border: 1px solid #dcdcdc;
+		border-bottom: none;
+		z-index: 9;
+	}
+	.v-hr-tbl-icn-wraper div {
+		display: none;
+	}
+	
+	.v-hr-tbl-icn-wraper .v-tbl-icn-sm {
+		display: block;
+		font-size: 14px;
+		width: 140px;
+		max-width: 140px;
+		height: 40px;
+		float: none;
+		background-color: #fff;
+		background-position: 100px;
+		padding-right: 70px;
+		padding-left: 10px;
+		line-height: 40px;
+		border-bottom: 1px solid #dcdcdc;
+	}
+	.v-tbl-icn-sm.v-icn-femail {
+		background-size: 33px;
+	}
+	.v-tbn-icn-dropdown {
+		display: block;
+		float: right;
+		clear: both;
+		width: 40px;
+		height: 40px;
+		background: url(../images/dots.png) no-repeat center;
+		cursor: pointer;
+	}
 }
 
 
@@ -2247,5 +2286,8 @@
     }
     .review-for-text-sm-screen {
 		display: none;
+	}
+	.v-hr-tbl-icn-wraper {
+		display: block !important;
 	}
 }
